--- a/scss/partials/layout/_layout.scss
+++ b/scss/partials/layout/_layout.scss
@@ -39,6 +39,7 @@ h3 {
     padding: 0;
     padding: 50px 0;
     img {
+        z-index: 999;
         display: inline-block;
         padding: 0 20px;
         vertical-align: middle;
@@ -47,6 +48,8 @@ h3 {
     }
 }
 .client {
+    z-index: 9999;
+    position: relative;
     
     img {
         max-height: 90px;
@@ -69,4 +72,48 @@ h3 {
         filter: grayscale(0%);
         -webkit-filter: grayscale(0%);
     }
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    z-index: 999;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 200px; 
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 10px; 
+    position: absolute;
+    z-index: 9999;
+    bottom: 125%; 
+    left: 50%;
+    margin-left: -100px; 
+    opacity: 0;
+    transition: opacity 0.3s;
+    
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
+.tooltip .tooltiptext::after {
+    content: '';
+    position: absolute;
+    top: 100%; 
+    left: 50%;
+    margin-left: -15px; 
+    border-width: 15px; 
+    border-style: solid;
+    border-color: #333 transparent transparent transparent; 
+    
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+    z-index: 9999;
 }
