--- a/scss/partials/utilities/_mixins.scss
+++ b/scss/partials/utilities/_mixins.scss
@@ -31,7 +31,7 @@ MIXINS
     flex-direction: column; 
     height: 100%;
     position: relative;
-    
+    z-index: 1;
     &:hover {
         transform: translateY(-10px);
         transition: .5s ease;
@@ -45,7 +45,7 @@ MIXINS
 
     img {
         width: 100%;
-        //height: 220px;
+        
     }
 
     a {
@@ -70,7 +70,7 @@ MIXINS
         margin: 0 20px;
         border-top: 1px solid gray;
         height: 123px;
-        
+        z-index: 1;
         ul {
             list-style-type: none;
             
@@ -88,7 +88,7 @@ MIXINS
       top: 10px; 
       right: 0; 
       padding: 4px 6px;
-      //border-radius: 5px;
+      
       color: white; 
       font-size: 0.8em; 
       &.career {
